--- a/src/components/BookSearch/BookSearch.css
+++ b/src/components/BookSearch/BookSearch.css
@@ -1,1 +1,31 @@
-.BookSearch-header {}
+/* .BookSearch-header {} */
+.search-window {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .search-input {
+    width: 300px;
+    padding: 10px;
+    font-size: 18px;
+    border: none;
+    border-radius: 5px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    margin-right: 10px;
+  }
+  
+  .search-button {
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    padding: 10px;
+    font-size: 18px;
+    cursor: pointer;
+  }
+  
+  .search-button:hover {
+    background-color: #0062cc;
+  }
+  
