--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
     justify-content: center;
     align-items: center;
     transition: background-color 0.3s, color 0.3s;
-    padding: 20px;
+    padding: 0px 10px;
   }
   
   .light {
