--- a/src/components/BookSearch/BookSearch.css
+++ b/src/components/BookSearch/BookSearch.css
@@ -3,6 +3,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  box-sizing: border-box;
 }
 
 .search-input {
@@ -30,4 +31,27 @@
 
 .search-button:hover {
   background-color: #0062cc;
+}
+
+.search-input.small {
+  width: 100%;
+  box-sizing: border-box;
+
+}
+
+.input_container{
+  display: flex;
+  box-sizing: border-box;
+  align-items: center;
+  color: grey;
+  padding-left: 10px;
+  height: 50px;
+  width: 100vw;
+  margin-bottom: 100px;
+}
+
+.input_container input{
+  color  : black;
+  box-sizing: border-box;
+  background-color: transparent;
 }
