add focus, hover and active effect to search input

--- a/src/components/BookSearch/BookSearch.css
+++ b/src/components/BookSearch/BookSearch.css
@@ -17,7 +17,8 @@
     letter-spacing: 0.5px;
 
     &:focus,
-    &:active {
+    &:active,
+    &:hover {
         box-shadow: 2px 4px 16px rgba(28, 32, 36, 0.6);
     }
 }
