--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -22,27 +22,22 @@
     width: 35%;
 }
 
-
-
 .MuiInputBase-input {
     font-family: 'Roboto', 'Open Sans', sans-serif;
 }
 
-
 .checkbox-wrapper input {
-    margin-right: .5rem;
+    margin-right: 0.5rem;
 }
-
-
 
 .login-button {
     background-color: #1976d2;
     color: #fff;
-    padding: .5rem 1.25rem;
+    padding: 0.5rem 1.25rem;
     border: none;
     font-weight: 700;
     font-size: 1.25rem;
-    border-radius: .25rem;
+    border-radius: 0.25rem;
     cursor: pointer;
     width: 35%;
 }
