--- a/src/pages/ForgotPassword/ForgotPassword.css
+++ b/src/pages/ForgotPassword/ForgotPassword.css
@@ -22,18 +22,13 @@
     width: 35%;
 }
 
-
-
 .MuiInputBase-input {
     font-family: 'Roboto', 'Open Sans', sans-serif;
 }
 
-
 .checkbox-wrapper input {
-    margin-right: .5rem;
+    margin-right: 0.5rem;
 }
-
-
 
 .forgotpassword-button {
     display: flex;
@@ -41,11 +36,11 @@
     justify-content: center;
     background-color: #1976d2;
     color: #fff;
-    padding: .5rem 1.25rem;
+    padding: 0.5rem 1.25rem;
     border: none;
     font-weight: 500;
-    font-size: .9rem;
-    border-radius: .25rem;
+    font-size: 0.9rem;
+    border-radius: 0.25rem;
     cursor: pointer;
     width: 35%;
 }
