--- a/src/components/CaptureFeedback/CaptureFeedback.css
+++ b/src/components/CaptureFeedback/CaptureFeedback.css
@@ -28,16 +28,16 @@
   background: none;
 }
 
-/* Form Styling */
-
+/* INITIAL Form Styling */
 .modal-form {
   width: 100%;
   height: 100%;
-  padding: 10%;
+  padding: 4%;
 }
 
 .feedback-modal h2 {
   text-align: center;
+  margin-bottom: 10%;
 }
 
 .feedback-textarea {
@@ -47,25 +47,24 @@
   padding: 10px;
   border-radius: 5px;
   border: 1px solid #ccc;
+  resize: none;
 }
-
-
 
 .button-group {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
 }
 
-.submit-button, .email-button {
-  padding: 10px 20px;
-  border: none;
-  border-radius: 5px;
-  background-color: #007BFF;
-  color: white;
-  cursor: pointer;
+/* DIRECT or EMAIL forms styling */
+.feedback-textarea {
+  resize: none;
 }
 
-.email-button {
-  background-color: #28a745;
+.rating-container {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 20px;
 }
+
+
 
