--- a/src/components/CaptureFeedback/CaptureFeedback.css
+++ b/src/components/CaptureFeedback/CaptureFeedback.css
@@ -1,4 +1,4 @@
-/* Modal Styling */
+/* MODAL Styling */
 .overlay {
   position: fixed;
   top: 0;
@@ -28,7 +28,7 @@
   background: none;
 }
 
-/* INITIAL Form Styling */
+/* FORM Styling */
 .modal-form {
   width: 100%;
   height: 100%;
@@ -55,7 +55,6 @@
   justify-content: space-around;
 }
 
-/* DIRECT or EMAIL forms styling */
 .feedback-textarea {
   resize: none;
 }
