--- a/src/components/Feedback/Feedback.css
+++ b/src/components/Feedback/Feedback.css
@@ -12,8 +12,8 @@
   position: absolute;
   top: 50%;
   left: 50%;
-  width: 75%;
-  height: 75%;
+  width: 50%;
+  height: 55%;
   transform: translate(-50%, -50%);
   background: white;
   padding: 20px;
@@ -35,9 +35,8 @@
   padding: 4%;
 }
 
-.feedback-modal h2 {
+.feedback-header {
   text-align: center;
-  margin-bottom: 10%;
 }
 
 .feedback-textarea {
